fix header on mobile

--- a/src/parts/header/header.scss
+++ b/src/parts/header/header.scss
@@ -3,7 +3,7 @@
   height: 70px;
   background-color: var(--white);
   z-index: 6;
-  transition: color .4s var(--easing);
+  transition: background-color .4s var(--easing);
   @media (min-width: 768px) {
     height: 64px;
     transition: transform .4s var(--easing);
