--- a/src/stylesheets/mobile-menu.scss
+++ b/src/stylesheets/mobile-menu.scss
@@ -3,7 +3,7 @@
   top: 70px;
   height: calc(100% - 70px);
   width: 100%;
-  z-index: 6;
+  z-index: 5;
   padding: 20px;
   display: flex;
   flex-direction: column;
